@startuml
skinparam class {
    BackgroundColor White
    BorderColor Black
    ArrowColor Black
}
skinparam BackgroundColor White
hide empty members

class DatabaseManager {
    +db_path: str
    -init_database(): void
    +create_user(): dict
    +authenticate_user(): dict
    +cache_profile(): str
    +save_search(): str
    +get_history(): list
    +save_model_metadata(): str
}

class FeatureExtractor {
    +extract_from_profile(profile: dict): List
    +extract_from_manual_input(): List
    +extract_from_dataset_row(row): List
    +calc_engagement_rate(): float
    +analyze_bio(): dict
    +calc_username_anomaly_score(): float
}

class ProfileFetcher {
    +db: DatabaseManager
    +demo_mode: bool
    +apify_token: str
    +fetch_profile(username: str): dict
    -fetch_via_apify(username: str): dict
    -fetch_via_rapidapi(username: str): dict
    -fetch_via_instaloader(username: str): dict
    -fetch_via_web(username: str): dict
}

class HistoryManager {
    +db: DatabaseManager
    +save_result(): str
    +get_user_history(): List
    +delete_record(): bool
    +export_csv(): str
    +export_pdf(): bytes
}

class ReportGenerator {
    +styles: dict
    +generate_single_report(): bytes
    +generate_batch_report(): bytes
    +generate_history_report(): bytes
}

class Preprocessor {
    +scaler: object
    +feature_extractor: FeatureExtractor
    +engineer_features(): DataFrame
    +normalize(): tuple
    +apply_smote(): tuple
    +run_full_pipeline(): dict
}

ProfileFetcher "1" *-- "1" DatabaseManager : composition
HistoryManager "1" *-- "1" DatabaseManager : composition
Preprocessor "1" *-- "1" FeatureExtractor : composition
HistoryManager ..> ReportGenerator : dependency

@enduml
